scripts/iptables.rules
*filter
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A OUTPUT -d 172.16.0.0/12 -j ACCEPT
-A OUTPUT -d 127.0.0.0/8 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -j ACCEPT
-A OUTPUT -d 185.242.4.0/24 -o enp+ -p tcp -m multiport --dports 443 -j ACCEPT
-A OUTPUT -d 193.32.127.0/24 -o enp+ -p tcp -m multiport --dports 443 -j ACCEPT
-A OUTPUT -d 194.127.199.0/24 -o enp+ -p tcp -m multiport --dports 443 -j ACCEPT
-A OUTPUT -d 192.138.218.0/24 -o enp+ -p tcp -m multiport --dports 443 -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT
COMMIT
